# fine-tuning-pipeline

./: .env.example  .gitignore  DEMO_WALKTHROUGH.md  FineTuningExperience.MD  LICENSE  README.md  cost_ledger.md  model_card.md  pyproject.toml
data/: README.md  build_dataset.py
deploy/: fireworks.md
docs/: architecture_workflow.md  calc_ablation_plan.md  current_state.md  dataset_explanation.md  error_analysis_summary.md  evaluation_methodology.md  example_predictions.md  fine_tuning_config.md  finqa_learning_guide.md  iteration_notes.md  known_issues.md  next_sft_plan.md  phase_1_closeout.md  phase_2_strategy.md  project_plan.md
eval/: README.md  build_failure_pack.py  build_report.py  check_config.py  run_objective_eval.py  run_planner_calculator.py  run_predictions.py  run_program_planner.py
reports/: ablations.md  base_bakeoff.md  dataset_card.md  eval_report.md  eval_spec.md  failure_analysis.md  failure_labels_sft_1k.csv  failure_labels_sft_1k.md  latest_result.md  model_access.md  phase_1_results_summary.json  phase_1_results_summary.md  planner_calculator_oracle.md  qwen3_program_planner_run.md  qwen3_program_sft_failure_analysis.md  qwen3_program_sft_run.md  qwen3_program_sft_targeted_2k_failure_analysis.md  qwen3_program_sft_targeted_2k_run.md  qwen3_reasoning_sft_run.md  qwen3_source_program_sft_run.md  sft_smoke_run.md
tests/: test_build_failure_pack.py  test_calculator.py  test_data_pipeline.py  test_env.py  test_evaluation.py  test_judge.py  test_metrics.py  test_program_planner.py  test_prompts.py  test_provider_message_text.py  test_providers.py  (+4 more)
(+16 files in other folders)
