[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finqa-finetuning-pipeline"
version = "0.1.0"
description = "Eval-first fine-tuning scaffold for a financial-document QA assistant."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
